# Broadcast-Graphics-Live

./: .gitignore  CMakeLists.txt  FLATPAK-BUILD-README.md  INSTALL.txt  README.md  README.txt  build-ubuntu-wsl.bat  build-ubuntu-wsl.config.json  build-ubuntu-wsl.ps1  build-windows.ps1  buildspec.json  docs-background-color-effect-redesign.md  docs-color-gradient-compact-consistency.md  docs-effect-stack-mask-toggle.md  docs-gradient-canvas-tab-workflow-fix.md  docs-gradient-intermediate-stops.md  docs-gradient-photoshop-tool-rebuild.md  docs-gradient-stop-drag-crash-fix.md  docs-gradient-stop-selection-preview-drag-fix.md  docs-gradient-tabbed-editor-fix.md  docs-layer-list-fx-parenting-lock-fix.md  docs-recent-colors-luma-masks-textbox-fix.md  update-and-build.bat  update-and-build.config.json  update-and-build.ps1  vcpkg.json
.github/workflows/: build-macos.yml  build-macos.yml.disabled  build-multiplatform.yml  build-windows.yml
OBS-Graphics-Studio-Pro - Gitlab/: README.md
cmake/: BglSourceModules.cmake  BootstrapQtWebSockets.cmake
cmake/ci/: README.md
data/canned-templates/: breaking-news-lower-third.json  episode-opener.json  full-screen-bulletin.json  headline-strap.json  live-location.json  news-quote-card.json  podcast-break-screen.json  podcast-guest.json  podcast-host.json  reporter-id.json  social-handle.json  topic-card.json
data/effect-transitions/: 4-Color Gradient.obgeffect  Background Color.obgeffect  Blocks.obgtransg  Bloom.obgeffect  Blur Slide In.obgtransg  Blur Slide In.obgtranst  Blur Slide In.osgtransg  Blur Slide In.osgtranst  Blur Text.obgtranst  Blur Text.osgtranst  Blur.obgeffect  Blur.ogseffect  Brightness & Contrast.obgeffect  README.md  (+34 more)
docs/: ARCHITECTURE_AND_BUILD.md  BUILTIN_EFFECTS_EXTENSION_MIGRATION.md  CHANGELOG.md  EDITOR_WORKFLOW.md  EFFECTS_AND_EXTENSIONS.md  EXTENSION_API_V2.md  EXTENSION_SDK.md  GPU_PREVIEW_CACHE_AND_TEMPORAL_MOTION_BLUR.md  README.md  RENDERING_AND_CACHE.md  TEXT_AND_LIVE_DATA.md  TEXT_ANIMATORS.md  USER_GUIDE.md  adaptive-prerender-sampling-step6-summary.md  adaptive-prerender-sampling.md  ae-track-matte-visibility-indicators.md  after-effects-style-timeline.md  align-to-selection-bounds-anchors-fix.md  appearance-canvas-helper-colors.md  auto-text-style-stop-matching.md  auto-text-styling-fixes.md  auto-text-styling-live-cues-tooltips.md  auto-text-styling-rich-text-sync-fix.md  auto-text-styling-textbox-refresh-fix.md  auto-text-styling.md  background-persistence-live-cue-cache.md  cache-alpha-cropped-payloads-implementation.md  cache-alpha-cropped-payloads.md  cache-lifecycle-atomic-clear-and-exact-prerender.md  cache-playback-log-findings-fix.md  cache-playback-presentation-diagnostics.md  cache-prerender-background-worker-realtime-fallback.md  cached-playback-render-lag-fix.md  canvas-corner-transform-cache-live-preview-fix.md  canvas-helper-color-adl-compile-fix.md  canvas-hover-ruler-border-fixes.md  canvas-ruler-indicator-unclipped-view.md  canvas-transform-live-preview-and-empty-title-cache-fix.md  canvas-unclipped-view-compile-fix.md  clock-layer-empty-rich-text-render-fix.md  (+131 more)
src/: plugin-main.cpp  title-assets.h  title-data.cpp  title-data.h  title-dock.cpp  title-dock.h  title-editor.cpp  title-editor.h  title-hotkeys.cpp  title-source.cpp
tests/: adjustment_effects_transitions_contract_test.cpp  alt_drag_authoritative_clone_contract_test.py  alt_drag_continuity_contract_test.py  animation_model_test.cpp  asset_layer_contract_test.cpp  asset_runtime_contract_test.cpp  auto_styling_learn_crash_safety_contract_test.py  auto_styling_rule_editor_ui_contract_test.py  auto_styling_rule_generalization_contract_test.py  auto_styling_rule_save_preset_contract_test.py  auto_styling_rule_state_sync_contract_test.py  auto_styling_smart_analyzer_contract_test.py  cache_frame_payload_test.cpp  cache_tile_payload_test.cpp  cache_time_contract_test.cpp  canvas_refresh_pacing_contract_test.cpp  canvas_scaling_manipulation_contract_test.cpp  cue_ending_visual_contract_test.cpp  development_audit_contract_test.cpp  disk_cache_tiling_contract_test.cpp  editor_character_version_revision_144_contract_test.cpp  editor_keyframe_graph_matte_revision_143_contract_test.cpp  editor_keyframe_icon_revision_142_contract_test.cpp  editor_timeline_revision_141_contract_test.cpp  editor_ui_revision_140_contract_test.cpp  effect_keyframe_timeline_canvas_contract_test.cpp  effect_preview_shortcuts_contract_test.cpp  effects_cleanup_four_color_gradient_contract_test.cpp  effects_interaction_regression_contract_test.cpp  effects_stack_layer_space_contract_test.cpp  external_data_core_contract_test.cpp  external_data_live_cue_transition_contract_test.cpp  external_data_logging_test.cpp  external_data_providers_contract_test.cpp  external_data_runtime_test.cpp  external_data_ui_contract_test.cpp  gpu_mask_contract_test.cpp  gpu_prerender_phase14_contract_test.cpp  gpu_ram_cache_tiling_contract_test.cpp  gpu_rounded_image_clip_test.cpp  (+37 more)
tools/: audit_cache_contract.py  audit_code_clones.py  audit_development_091_linux_text_temporal_alias.py  audit_development_092_msvc_alias_include.py  audit_development_093_effects_stack_layer_space.py  audit_development_105_branding_docs.py  audit_development_106_external_data_core.py  audit_development_108_external_data_providers.py  audit_development_111_external_data_ui.py  audit_development_112_external_field_discovery.py  audit_development_113_live_text_table_mapping.py  audit_development_115_live_table_value_resolution.py  audit_development_116_live_table_managed_cells.py  audit_development_117_live_table_binding_preservation.py  audit_development_118_external_data_logging.py  audit_development_132_collapsible_titles_dock.py  audit_gpu_pipeline.py  audit_gpu_shape_phase11.py  audit_gpu_text_phase12c.py  audit_gpu_text_phase12d.py  audit_modularity_performance.py  audit_source_presentation_lifecycle.py  audit_text_stroke_phase12d1.py  audit_transactional_prerender_logging.py  audit_update_build_packaging.py  modular-source-map.json  source_bundle.py  test_gpu_shape_math.py  test_gpu_text_sdf.py
(+248 files in other folders)
